// Vitest Snapshot v1

exports[`code() builder > line numbers are displayed when set 1`] = `
"<div class=\\"markdown-body\\"><h1>Code Builder Test</h1>
<p>this test is intended to validate testing of code blocks</p>
<pre class='language-ts line-numbers-mode'><code v-pre>
<span class=\\"line\\"><span class=\\"token keyword\\">type</span> <span class=\\"token class-name\\">Valid</span> <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'bar'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'baz'</span></span>
<span class=\\"line\\"><span class=\\"token keyword\\">const</span> t<span class=\\"token operator\\">:</span> Valid <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span></span>
</code></pre><p>The test is now complete; everyone should return to their desks.</p>
</div>"
`;

exports[`code() builder > valid language choice is rendered 1`] = `
"<div class=\\"markdown-body\\"><h1>Code Builder Test</h1>
<p>This test is intended to validate testing of code blocks; the first test is a typescript block.</p>
<pre class='language-ts foobar'><code v-pre>
<span class=\\"line\\"><span class=\\"token keyword\\">type</span> <span class=\\"token class-name\\">Valid</span> <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'bar'</span> <span class=\\"token operator\\">|</span> <span class=\\"token string\\">'baz'</span></span>
<span class=\\"line\\"><span class=\\"token keyword\\">const</span> t<span class=\\"token operator\\">:</span> Valid <span class=\\"token operator\\">=</span> <span class=\\"token string\\">'foo'</span></span>
</code></pre><p>But now we have some Rust code too:</p>
<pre class='language-rust foobar' style='classless'><code v-pre>
<span class=\\"line\\"><span class=\\"token keyword\\">let</span> count<span class=\\"token punctuation\\">:</span> <span class=\\"token keyword\\">usize</span> <span class=\\"token operator\\">=</span> <span class=\\"token number\\">100</span><span class=\\"token punctuation\\">;</span></span>
</code></pre><p>The test is now complete; everyone should return to their desks.</p>
</div>"
`;
